Downloading Our Food Vision Mini App Files from Google Colab

--- a/09_PyTorch_Model_Deployment.ipynb
+++ b/09_PyTorch_Model_Deployment.ipynb
@@ -3715,10 +3715,22 @@
         "gradio==3.45.0"
       ],
       "metadata": {
-        "id": "uQVMWRoswHlV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uQVMWRoswHlV",
+        "outputId": "01d3c7ac-bcb2-482b-d3f6-f8d3ac7dcee8"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing demos/foodvision_mini/requirements.txt\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3811,10 +3823,170 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 9. Deploying our FoodVision Mini at Huffing Face Spaces"
+      ],
+      "metadata": {
+        "id": "ZJFfuSWOwSzI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 9.1 Downloading our FoodVisiojn Mini app files\n",
+        "\n",
+        "We want to download our `foodvision_mini` directory sp we can upload it to HFS"
+      ],
+      "metadata": {
+        "id": "3nqbdbiPxeXt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls demos/foodvision_mini"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W0qAD6bExqXX",
+        "outputId": "022b8200-9d94-46ba-e78d-0eda87c9650d"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "09_pretrained_effnetb2_feature_extractor_pizza_steak_sushi_20_percent.pth  examples  __pycache__\n",
+            "app.py\t\t\t\t\t\t\t\t\t   model.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Change into the foodvision_mini directory and zip it from the inside\n",
+        "!cd demos/foodvision_mini && zip -r ../foodvision_mini.zip * -x \"*.pyc\" \"*.ipynb\" \"*__pycache__*\" \"*ipynb_checkpoints*\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BzVv-iq6xsOF",
+        "outputId": "6c1d1948-9117-4456-ddf0-ba5be96702cc"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "updating: 09_pretrained_effnetb2_feature_extractor_pizza_steak_sushi_20_percent.pth (deflated 8%)\n",
+            "updating: app.py (deflated 54%)\n",
+            "updating: examples/ (stored 0%)\n",
+            "updating: examples/3622237.jpg (deflated 0%)\n",
+            "updating: examples/2582289.jpg (deflated 17%)\n",
+            "updating: examples/592799.jpg (deflated 1%)\n",
+            "updating: model.py (deflated 46%)\n",
+            "  adding: requirements.txt (deflated 6%)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  from google.colab import files\n",
+        "  files.download('demos/foodvision_mini.zip')\n",
+        "except:\n",
+        "  print(f'Not running')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "GJ2BxFDbyqys",
+        "outputId": "426ab21f-b30e-4787-9386-dea3520a5f8b"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_1bcf7938-369d-45a3-8154-48362559f72a\", \"foodvision_mini.zip\", 28977313)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZJFfuSWOwSzI"
+        "id": "ftDAPy3zyxiu"
       },
       "execution_count": null,
       "outputs": []
@@ -3825,7 +3997,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMXEQWZ7BKYCzGe+0hKrx/X",
+      "authorship_tag": "ABX9TyNak1JN5B0bVYJSnDfb/Dsn",
       "include_colab_link": true
     },
     "kernelspec": {
