Downloading example Image and Moving Our Food Vision Big Model File

--- a/09_PyTorch_Model_Deployment.ipynb
+++ b/09_PyTorch_Model_Deployment.ipynb
@@ -5179,10 +5179,81 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 11.1 Downloading an example image and moving it to the `examples` directory"
+      ],
       "metadata": {
         "id": "YSjxefAo1TrE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://unsplash.com/photos/burger-with-lettuce-and-tomatoes-sc5sTPMrVfk\n",
+        "!mv burger-with-lettuce-and-tomatoes-sc5sTPMrVfk demos/foodvision_big/examples/burger-with-lettuce-and-tomatoes-sc5sTPMrVfk\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3P_K6XsM2NYq",
+        "outputId": "00677c8d-28cd-4773-f9a5-8a674edcf180"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2023-12-20 15:31:29--  https://unsplash.com/photos/burger-with-lettuce-and-tomatoes-sc5sTPMrVfk\n",
+            "Resolving unsplash.com (unsplash.com)... 151.101.1.181, 151.101.65.181, 151.101.193.181, ...\n",
+            "Connecting to unsplash.com (unsplash.com)|151.101.1.181|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 199346 (195K) [text/html]\n",
+            "Saving to: ‘burger-with-lettuce-and-tomatoes-sc5sTPMrVfk.1’\n",
+            "\n",
+            "burger-with-lettuce 100%[===================>] 194.67K  --.-KB/s    in 0.02s   \n",
+            "\n",
+            "2023-12-20 15:31:29 (12.3 MB/s) - ‘burger-with-lettuce-and-tomatoes-sc5sTPMrVfk.1’ saved [199346/199346]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Moving the model to the demo\n",
+        "\n",
+        "!mv models/effnetb2_food101_20_percent.pth demos/foodvision_big/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NZAT-hHj2bp0",
+        "outputId": "95c78f92-44cc-49d3-c721-175e71b9ada2"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mv: cannot stat 'models/effnetb2_food101_20_percent.pth': No such file or directory\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Creating a class_names.txt file with the supported classes\n"
+      ],
+      "metadata": {
+        "id": "E3apRFk93Wgk"
       },
       "execution_count": null,
       "outputs": []
@@ -5192,7 +5263,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVVRC/JDsNdrXl1tua+PAz",
+      "authorship_tag": "ABX9TyM11K7K0rxEQP2aGeCwv5WQ",
       "include_colab_link": true
     },
     "kernelspec": {
