Saving Food 101 Class Names to a Text File and Reading them Back In

--- a/09_PyTorch_Model_Deployment.ipynb
+++ b/09_PyTorch_Model_Deployment.ipynb
@@ -5248,12 +5248,236 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Creating a class_names.txt file with the supported classes\n"
+        "## 11.2 Creating a `class_names.txt` file with the supported classes\n"
       ],
       "metadata": {
         "id": "E3apRFk93Wgk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "food101_class_names[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9v3-F8Vl3sSv",
+        "outputId": "5a72d923-c3d9-4f0d-fbca-13410c0bd4ba"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['apple_pie',\n",
+              " 'baby_back_ribs',\n",
+              " 'baklava',\n",
+              " 'beef_carpaccio',\n",
+              " 'beef_tartare',\n",
+              " 'beet_salad',\n",
+              " 'beignets',\n",
+              " 'bibimbap',\n",
+              " 'bread_pudding',\n",
+              " 'breakfast_burrito']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "foodvision_big_class_names_path = foodvision_big_demo_path/\"class_names.txt\"\n",
+        "foodvision_big_class_names_path"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "39aYvW_i3-br",
+        "outputId": "66b47e2f-a8b5-4ce5-96e1-1c9f8125ce7f"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "PosixPath('demos/foodvision_big/class_names.txt')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Write the class namesx to the txt file\n",
+        "with open(foodvision_big_class_names_path,'w') as f:\n",
+        "  print(f'[INFO] Saving Food101 class names to {foodvision_big_class_names_path}')\n",
+        "  f.write('\\n'.join(food101_class_names)) # new line per class name"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HUMNqzqz4Mkh",
+        "outputId": "d4e2c23c-b226-4abd-ed66-d621fc7ff2e0"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[INFO] Saving Food101 class names to demos/foodvision_big/class_names.txt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Open class names and read them into a list\n",
+        "with open(foodvision_big_class_names_path,'r') as f:\n",
+        "  food101_class_names_loaded = [food.strip() for food in f.readlines()]\n",
+        "# food101_class_names_loaded"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-z56HSc04dU3",
+        "outputId": "1d370217-4583-47f6-e8bb-fd7a03aed577"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['apple_pie',\n",
+              " 'baby_back_ribs',\n",
+              " 'baklava',\n",
+              " 'beef_carpaccio',\n",
+              " 'beef_tartare',\n",
+              " 'beet_salad',\n",
+              " 'beignets',\n",
+              " 'bibimbap',\n",
+              " 'bread_pudding',\n",
+              " 'breakfast_burrito',\n",
+              " 'bruschetta',\n",
+              " 'caesar_salad',\n",
+              " 'cannoli',\n",
+              " 'caprese_salad',\n",
+              " 'carrot_cake',\n",
+              " 'ceviche',\n",
+              " 'cheese_plate',\n",
+              " 'cheesecake',\n",
+              " 'chicken_curry',\n",
+              " 'chicken_quesadilla',\n",
+              " 'chicken_wings',\n",
+              " 'chocolate_cake',\n",
+              " 'chocolate_mousse',\n",
+              " 'churros',\n",
+              " 'clam_chowder',\n",
+              " 'club_sandwich',\n",
+              " 'crab_cakes',\n",
+              " 'creme_brulee',\n",
+              " 'croque_madame',\n",
+              " 'cup_cakes',\n",
+              " 'deviled_eggs',\n",
+              " 'donuts',\n",
+              " 'dumplings',\n",
+              " 'edamame',\n",
+              " 'eggs_benedict',\n",
+              " 'escargots',\n",
+              " 'falafel',\n",
+              " 'filet_mignon',\n",
+              " 'fish_and_chips',\n",
+              " 'foie_gras',\n",
+              " 'french_fries',\n",
+              " 'french_onion_soup',\n",
+              " 'french_toast',\n",
+              " 'fried_calamari',\n",
+              " 'fried_rice',\n",
+              " 'frozen_yogurt',\n",
+              " 'garlic_bread',\n",
+              " 'gnocchi',\n",
+              " 'greek_salad',\n",
+              " 'grilled_cheese_sandwich',\n",
+              " 'grilled_salmon',\n",
+              " 'guacamole',\n",
+              " 'gyoza',\n",
+              " 'hamburger',\n",
+              " 'hot_and_sour_soup',\n",
+              " 'hot_dog',\n",
+              " 'huevos_rancheros',\n",
+              " 'hummus',\n",
+              " 'ice_cream',\n",
+              " 'lasagna',\n",
+              " 'lobster_bisque',\n",
+              " 'lobster_roll_sandwich',\n",
+              " 'macaroni_and_cheese',\n",
+              " 'macarons',\n",
+              " 'miso_soup',\n",
+              " 'mussels',\n",
+              " 'nachos',\n",
+              " 'omelette',\n",
+              " 'onion_rings',\n",
+              " 'oysters',\n",
+              " 'pad_thai',\n",
+              " 'paella',\n",
+              " 'pancakes',\n",
+              " 'panna_cotta',\n",
+              " 'peking_duck',\n",
+              " 'pho',\n",
+              " 'pizza',\n",
+              " 'pork_chop',\n",
+              " 'poutine',\n",
+              " 'prime_rib',\n",
+              " 'pulled_pork_sandwich',\n",
+              " 'ramen',\n",
+              " 'ravioli',\n",
+              " 'red_velvet_cake',\n",
+              " 'risotto',\n",
+              " 'samosa',\n",
+              " 'sashimi',\n",
+              " 'scallops',\n",
+              " 'seaweed_salad',\n",
+              " 'shrimp_and_grits',\n",
+              " 'spaghetti_bolognese',\n",
+              " 'spaghetti_carbonara',\n",
+              " 'spring_rolls',\n",
+              " 'steak',\n",
+              " 'strawberry_shortcake',\n",
+              " 'sushi',\n",
+              " 'tacos',\n",
+              " 'takoyaki',\n",
+              " 'tiramisu',\n",
+              " 'tuna_tartare',\n",
+              " 'waffles']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9GOOxjGh47si"
       },
       "execution_count": null,
       "outputs": []
@@ -5263,7 +5487,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM11K7K0rxEQP2aGeCwv5WQ",
+      "authorship_tag": "ABX9TyMz2TKgjmi19AmeTq6ChXU2",
       "include_colab_link": true
     },
     "kernelspec": {
