Turning FoodVision Big into a python script

--- a/09_PyTorch_Model_Deployment.ipynb
+++ b/09_PyTorch_Model_Deployment.ipynb
@@ -5353,141 +5353,92 @@
         "# food101_class_names_loaded"
       ],
       "metadata": {
+        "id": "-z56HSc04dU3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 11.3 Turning FoodVision Big into a python script\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "3SeSUOlM5gCZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile demos/foodvision_big/model.py\n",
+        "import torch\n",
+        "import torchvision\n",
+        "from torch import nn\n",
+        "from torchvision.models._api import WeightsEnum\n",
+        "from torch.hub import load_state_dict_from_url\n",
+        "\n",
+        "def get_state_dict(self, *args, **kwargs):\n",
+        "    kwargs.pop(\"check_hash\",None)\n",
+        "    return load_state_dict_from_url(self.url, *args, **kwargs)\n",
+        "WeightsEnum.get_state_dict = get_state_dict\n",
+        "\n",
+        "\n",
+        "def create_effnetb2_model(num_classes:int=3, # default\n",
+        "                          seed:int=42):\n",
+        "  # 1,2,3 steps above: Create weights, transforms,\n",
+        "  weights = torchvision.models.EfficientNet_B2_Weights.DEFAULT\n",
+        "  transforms = weights.transforms()\n",
+        "  model = torchvision.models.efficientnet_b2(weights=weights)\n",
+        "\n",
+        "  # 4. Freeze the layers\n",
+        "  for param in model.parameters():\n",
+        "    param.requires_grad = False\n",
+        "\n",
+        "  # 5. Change the classifier head\n",
+        "  torch.manual_seed(seed)\n",
+        "  model.classifier = nn.Sequential(\n",
+        "      nn.Dropout(p=0.3,inplace=True),\n",
+        "      nn.Linear(in_features=1408,\n",
+        "                out_features = num_classes)\n",
+        "  )\n",
+        "\n",
+        "  return model, transforms"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "-z56HSc04dU3",
-        "outputId": "1d370217-4583-47f6-e8bb-fd7a03aed577"
+        "id": "9GOOxjGh47si",
+        "outputId": "11de680e-aaf5-4acf-fdd1-dbf6879cf061"
       },
-      "execution_count": 79,
+      "execution_count": 80,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['apple_pie',\n",
-              " 'baby_back_ribs',\n",
-              " 'baklava',\n",
-              " 'beef_carpaccio',\n",
-              " 'beef_tartare',\n",
-              " 'beet_salad',\n",
-              " 'beignets',\n",
-              " 'bibimbap',\n",
-              " 'bread_pudding',\n",
-              " 'breakfast_burrito',\n",
-              " 'bruschetta',\n",
-              " 'caesar_salad',\n",
-              " 'cannoli',\n",
-              " 'caprese_salad',\n",
-              " 'carrot_cake',\n",
-              " 'ceviche',\n",
-              " 'cheese_plate',\n",
-              " 'cheesecake',\n",
-              " 'chicken_curry',\n",
-              " 'chicken_quesadilla',\n",
-              " 'chicken_wings',\n",
-              " 'chocolate_cake',\n",
-              " 'chocolate_mousse',\n",
-              " 'churros',\n",
-              " 'clam_chowder',\n",
-              " 'club_sandwich',\n",
-              " 'crab_cakes',\n",
-              " 'creme_brulee',\n",
-              " 'croque_madame',\n",
-              " 'cup_cakes',\n",
-              " 'deviled_eggs',\n",
-              " 'donuts',\n",
-              " 'dumplings',\n",
-              " 'edamame',\n",
-              " 'eggs_benedict',\n",
-              " 'escargots',\n",
-              " 'falafel',\n",
-              " 'filet_mignon',\n",
-              " 'fish_and_chips',\n",
-              " 'foie_gras',\n",
-              " 'french_fries',\n",
-              " 'french_onion_soup',\n",
-              " 'french_toast',\n",
-              " 'fried_calamari',\n",
-              " 'fried_rice',\n",
-              " 'frozen_yogurt',\n",
-              " 'garlic_bread',\n",
-              " 'gnocchi',\n",
-              " 'greek_salad',\n",
-              " 'grilled_cheese_sandwich',\n",
-              " 'grilled_salmon',\n",
-              " 'guacamole',\n",
-              " 'gyoza',\n",
-              " 'hamburger',\n",
-              " 'hot_and_sour_soup',\n",
-              " 'hot_dog',\n",
-              " 'huevos_rancheros',\n",
-              " 'hummus',\n",
-              " 'ice_cream',\n",
-              " 'lasagna',\n",
-              " 'lobster_bisque',\n",
-              " 'lobster_roll_sandwich',\n",
-              " 'macaroni_and_cheese',\n",
-              " 'macarons',\n",
-              " 'miso_soup',\n",
-              " 'mussels',\n",
-              " 'nachos',\n",
-              " 'omelette',\n",
-              " 'onion_rings',\n",
-              " 'oysters',\n",
-              " 'pad_thai',\n",
-              " 'paella',\n",
-              " 'pancakes',\n",
-              " 'panna_cotta',\n",
-              " 'peking_duck',\n",
-              " 'pho',\n",
-              " 'pizza',\n",
-              " 'pork_chop',\n",
-              " 'poutine',\n",
-              " 'prime_rib',\n",
-              " 'pulled_pork_sandwich',\n",
-              " 'ramen',\n",
-              " 'ravioli',\n",
-              " 'red_velvet_cake',\n",
-              " 'risotto',\n",
-              " 'samosa',\n",
-              " 'sashimi',\n",
-              " 'scallops',\n",
-              " 'seaweed_salad',\n",
-              " 'shrimp_and_grits',\n",
-              " 'spaghetti_bolognese',\n",
-              " 'spaghetti_carbonara',\n",
-              " 'spring_rolls',\n",
-              " 'steak',\n",
-              " 'strawberry_shortcake',\n",
-              " 'sushi',\n",
-              " 'tacos',\n",
-              " 'takoyaki',\n",
-              " 'tiramisu',\n",
-              " 'tuna_tartare',\n",
-              " 'waffles']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 79
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing demos/foodvision_big/model.py\n"
+          ]
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### 11.4 Turning FoodVision Big into a Gradio app with a python script (`app.py`)\n"
+      ],
       "metadata": {
-        "id": "9GOOxjGh47si"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "7Ak37_oW55M1"
+      }
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMz2TKgjmi19AmeTq6ChXU2",
+      "authorship_tag": "ABX9TyPTVgGWGqj4HWvlr3xqXj/2",
       "include_colab_link": true
     },
     "kernelspec": {
