--- a/09_PyTorch_Model_Deployment.ipynb
+++ b/09_PyTorch_Model_Deployment.ipynb
@@ -1252,7 +1252,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 396
+          "height": 395
         },
         "id": "YccLojJXD7Kk",
         "outputId": "1c7775fd-2059-4847-dfd5-229bd6571f51"
@@ -5427,18 +5427,125 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 11.4 Turning FoodVision Big into a Gradio app with a python script (`app.py`)\n"
+        "### 11.4 Turning FoodVision Big into a Gradio app with a python script (`app.py`)\n",
+        "\n",
+        "The file will contain:\n",
+        "1. Imports and class names setup as well as the `class_names.txt` imports\n",
+        "2. Model and transforms preparation\n",
+        "3. Predict function\n",
+        "4. Gradio app - our Gradio interface + Launch command"
       ],
       "metadata": {
         "id": "7Ak37_oW55M1"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile demos/foodvision_big/app.py\n",
+        "\n",
+        "### 1. Imports and class names ###\n",
+        "import gradio as gr\n",
+        "import os\n",
+        "import torch\n",
+        "\n",
+        "from model import create_effnetb2_model\n",
+        "from timeit import deafult_timer as trimer\n",
+        "from typing import Tuple, Dict\n",
+        "\n",
+        "# Setup class names\n",
+        "with open('class_names.txt','r') as f:\n",
+        "  food101_class_names = [food.strip() for food in f.readlines()]\n",
+        "\n",
+        "### 2. Model and transforms preparation ###\n",
+        "\n",
+        "# Create model and transforms\n",
+        "effnetb2, effnetb2_transforms = create_effnetb2_model(num_classes = len(food101_class_names))\n",
+        "\n",
+        "# Load the saved weights\n",
+        "effnetb2.load_state_dict(\n",
+        "    torch.load(f='effnetb2_food101_20_percent.pth',\n",
+        "               map_location = torch.device('cpu')) # no need to load it back into the GPU\n",
+        ")\n",
+        "\n",
+        "### 3. Predict function ###\n",
+        "\n",
+        "def predict(img) -> Tuple[Dict, float]:\n",
+        "  # Start the timer\n",
+        "  start_time = timer()\n",
+        "\n",
+        "  # Transform the inout image for use with EffNetB2\n",
+        "  img = effnetb2_transforms(img).unsqueeze(0) # unsqueeze = add batch dimension on 0th dim\n",
+        "\n",
+        "  # Put model into eval mode, make pred\n",
+        "  effnetb2.eval()\n",
+        "  with torch.inference_mode():\n",
+        "    # Pass transformed image through the model and turn the pred logits into probability\n",
+        "    pred_probs = torch.softmax(effnetb2(img),dim=1)\n",
+        "\n",
+        "  # Create pred label and pred probability dict\n",
+        "  pred_labels_and_probs = {class_names[i]: float(pred_probs[0][i]) for i in range(len(class_names))}\n",
+        "\n",
+        "  # Calculate pred time\n",
+        "  end_time = timer()\n",
+        "  pred_time = round(end_time - start_time,4)\n",
+        "\n",
+        "  return pred_labels_and_probs, pred_time\n",
+        "\n",
+        "### 4. Gradio app ###\n",
+        "\n",
+        "title = 'FoodVision Big'\n",
+        "description = 'An EfficientNetB2 feature extractor supporting [101 food categories]!(https://github.com/mrdbourke/pytorch-deep-learning/blob/main/extras/food101_class_names.txt)!'\n",
+        "article = 'Created with PyTorch'\n",
+        "\n",
+        "# Create example list\n",
+        "exmaple_list = [['examples/'+ example] for example in os.listdir('examples')]\n",
+        "\n",
+        "# Create the Gradio demo\n",
+        "demo = gr.Interface(fn=predict,# maps inputs to outputs\n",
+        "                    inputs = gr.Image(type='pil'),\n",
+        "                    outputs = [gr.Label(num_top_classes = 5, label=\"Predictions\"),\n",
+        "                               gr.Number(label='Prediction time (s)')],\n",
+        "                    examples=example_list,\n",
+        "                    title=title,\n",
+        "                    article = article)\n",
+        "\n",
+        "#Launch it\n",
+        "demo.launch()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BkQwvOM26Ow2",
+        "outputId": "5eca635d-eba3-454c-f118-94d3e2bc6674"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing demos/foodvision_big/app.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0grsdzcl8fcY"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTVgGWGqj4HWvlr3xqXj/2",
+      "authorship_tag": "ABX9TyOfxYQXaEdCZGRDlfAchcv8",
       "include_colab_link": true
     },
     "kernelspec": {
