Downloading the FoodVision Big app files

--- a/09_PyTorch_Model_Deployment.ipynb
+++ b/09_PyTorch_Model_Deployment.ipynb
@@ -4454,7 +4454,7 @@
         "id": "3nqbdbiPxeXt"
       },
       "source": [
-        "### 9.1 Downloading our FoodVisiojn Mini app files\n",
+        "### 9.1 Downloading our FoodVision Mini app files\n",
         "\n",
         "We want to download our `foodvision_mini` directory sp we can upload it to HFS"
       ]
@@ -5532,10 +5532,173 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 11.5 Creating a requirements file for FoodVision Big (the same as FoodVision Mini)"
+      ],
+      "metadata": {
+        "id": "WAFh41fl9SiM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile demos/foodvision_big/requirements.txt\n",
+        "torch==2.1.0\n",
+        "torchvision==0.16.0\n",
+        "gradio==3.45.0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0grsdzcl8fcY",
+        "outputId": "c450d522-2a09-4b0f-f70d-1b9925d48add"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing demos/foodvision_big/requirements.txt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 11.6 Downloading the FoodVision Big app files"
+      ],
+      "metadata": {
+        "id": "56ZzR4jy9Oxm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Change into the foodvision_mini directory and zip it from the inside\n",
+        "!cd demos/foodvision_big && zip -r ../foodvision_big.zip * -x \"*.pyc\" \"*.ipynb\" \"*__pycache__*\" \"*ipynb_checkpoints*\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JPN5HcHF9agD",
+        "outputId": "52cb2841-b6ba-42ae-d009-7c39df570cbd"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  adding: app.py (deflated 53%)\n",
+            "  adding: class_names.txt (deflated 48%)\n",
+            "  adding: effnetb2_food101_20_percent.pth (deflated 8%)\n",
+            "  adding: examples/ (stored 0%)\n",
+            "  adding: examples/greek_salad.jpg (deflated 0%)\n",
+            "  adding: examples/ice_cream.jpg (deflated 2%)\n",
+            "  adding: examples/burger.jpg (deflated 1%)\n",
+            "  adding: model.py (deflated 52%)\n",
+            "  adding: requirements.txt (deflated 6%)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Download the zip file\n",
+        "\n",
+        "try:\n",
+        "  from google.colab import files\n",
+        "  files.download('demos/foodvision_big.zip')\n",
+        "except:\n",
+        "  print(f'Not running')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "id": "MatJ1FXB9onz",
+        "outputId": "0e1568e0-8b54-4d3e-c1f1-095ec03e02b5"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "    async function download(id, filename, size) {\n",
+              "      if (!google.colab.kernel.accessAllowed) {\n",
+              "        return;\n",
+              "      }\n",
+              "      const div = document.createElement('div');\n",
+              "      const label = document.createElement('label');\n",
+              "      label.textContent = `Downloading \"${filename}\": `;\n",
+              "      div.appendChild(label);\n",
+              "      const progress = document.createElement('progress');\n",
+              "      progress.max = size;\n",
+              "      div.appendChild(progress);\n",
+              "      document.body.appendChild(div);\n",
+              "\n",
+              "      const buffers = [];\n",
+              "      let downloaded = 0;\n",
+              "\n",
+              "      const channel = await google.colab.kernel.comms.open(id);\n",
+              "      // Send a message to notify the kernel that we're ready.\n",
+              "      channel.send({})\n",
+              "\n",
+              "      for await (const message of channel.messages) {\n",
+              "        // Send a message to notify the kernel that we're ready.\n",
+              "        channel.send({})\n",
+              "        if (message.buffers) {\n",
+              "          for (const buffer of message.buffers) {\n",
+              "            buffers.push(buffer);\n",
+              "            downloaded += buffer.byteLength;\n",
+              "            progress.value = downloaded;\n",
+              "          }\n",
+              "        }\n",
+              "      }\n",
+              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
+              "      const a = document.createElement('a');\n",
+              "      a.href = window.URL.createObjectURL(blob);\n",
+              "      a.download = filename;\n",
+              "      div.appendChild(a);\n",
+              "      a.click();\n",
+              "      div.remove();\n",
+              "    }\n",
+              "  "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_f42d7e09-12a8-4493-a000-200ab93a13ac\", \"foodvision_big.zip\", 33825575)"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "0grsdzcl8fcY"
+        "id": "jek-r-Jn9zhV"
       },
       "execution_count": null,
       "outputs": []
@@ -5545,7 +5708,8 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfxYQXaEdCZGRDlfAchcv8",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyNkdtg5r6AqxNhNiCuiz8MV",
       "include_colab_link": true
     },
     "kernelspec": {
